--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -39,7 +39,7 @@
       </div>
       <hr class="mx-auto h-[1px] max-w-2xl bg-slate-200">
       <div class="container mx-auto max-w-2xl px-4 py-6">
-        <p class="font-mono font-extrabold text-yellow-200 text-3xl">Featured Projects:</p>
+        <p class="font-mono font-extrabold text-yellow-200 text-3xl">Latest Projects:</p>
         <div class="container grid max-w-2xl grid-cols-1 md:grid-cols-2 gap-4 my-4">
           {% for proj in allproj %}
           <div class="bg-slate-700 rounded-lg px-2 py-4">
