--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,84 +1,74 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Chad's Website</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://unpkg.com/htmx.org@1.9.5"></script>
-  </head>
-  <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}' style="padding: 0 0 0 0; margin: 0 0 0 0;">
-    <div class="bg-scroll -z-50" style="background-image:url(https://imgs.search.brave.com/kenpjc9bK6n6JFLosfs9-cN3h9YR91ZuV0Ck5zBuWIE/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9pMi53/cC5jb20vaS5waW5p/bWcuY29tL29yaWdp/bmFscy82Mi82NC82/Zi82MjY0NmY4NzAw/M2U5ZDFhOGU1MzM5/YmZmZmJjZjViOC5q/cGc);"> 
-    <div class="bg-black bg-opacity-70">
-    <nav class="fixed w-full bg-black bg-opacity-20 backdrop-blur-lg">
-      <div class="container flex items-center justify-between px-6 pt-6 pb-6 mx-auto">
-        <div class="flex items-center"> 
-          <a href="" class="font-mono font-extrabold text-lg text-white pr-4 hover:text-transparent hover:bg-clip-text hover:bg-gradient-to-r hover:from-pink-500 hover:to-yellow-500">HOME</a>
-          <a href="" class="font-mono font-extrabold text-lg text-white pr-4 hover:text-transparent hover:bg-clip-text hover:bg-gradient-to-r hover:from-pink-500 hover:to-yellow-500">PROJECTS</a>
-          <a href="" class="font-mono font-extrabold text-lg text-white hover:text-transparent hover:bg-clip-text hover:bg-gradient-to-r hover:from-pink-500 hover:to-yellow-500">BLOGS</a>
-        </div>
-        <div class="flex items-center">
-          <button class="font-mono font-extrabold bg-gradient-to-r from-pink-500 to-yellow-500 text-white py-2 px-4 rounded-lg hover:from-purple-400 hover:to-pink-600">LOGIN</button>
-        </div>
-      </div>
-    </nav>
-    <div id="body" class="py-[110px]">
-      <div class="container mx-auto grid grid-cols-1 md:grid-flow-cols md:grid-cols-2 gap-4 py-10 px-6 max-w-2xl">
-        <div class="md:col-span-1">
-          <img class="w-28 mx-auto rounded-full" src="https://imgs.search.brave.com/5TUrhnb1Se-ppc3etZn6gR-dc8BTB9dDJB3vtozpx0U/rs:fit:500:0:0/g:ce/aHR0cHM6Ly9pLnBp/bmltZy5jb20vb3Jp/Z2luYWxzLzY0L2Y1/LzAxLzY0ZjUwMWRi/NDY3YzQ0NDQ1Mjg1/NTkxYWI4Y2E4NTEy/LmpwZw" alt="profile_pic">
-        </div>
-        <div class="md:col-span-1 md:py-2">
-          <p class="font-mono text-transparent text-4xl font-extrabold bg-clip-text bg-gradient-to-r from-pink-500 to-yellow-500 text-center md:text-left">GIGA CHAD</p>
-          <p class="font-mono text-white text-xl font-extrabold text-center md:text-left py-2">Machine Learning and Web Developer</p>
-          <p class="font-mono text-slate-300 font-extrabold text-sm text-center md:text-left">Arch Linux + i3 + VIM user</p>
-        </div>
-      </div>
-      <hr class="mx-auto h-[1px] max-w-2xl bg-slate-200">
-      <div class="container mx-auto max-w-2xl px-4 py-6">
-        <p class="font-mono font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-pink-500 to-yellow-500">Q - Why did the two Java methods get a divorce?</p> 
-        <p class="font-extrabold font-mono text-white">A - Because they couldn't agree on the return type.</p>
-      </div>
-      <hr class="mx-auto h-[1px] max-w-2xl bg-slate-200">
-      <div class="container mx-auto max-w-2xl px-4 py-6">
-        <p class="font-mono font-extrabold text-transparent text-5xl bg-clip-text bg-gradient-to-r from-yellow-500 to-pink-500">Latest Blogs:</p>
-        <div class="container grid max-w-2xl grid-cols-1 md:grid-cols-2 gap-4 my-4">
-          {% for blog in allblog %}
-          <div class="bg-white bg-opacity-20 backdrop-blur-md rounded-lg px-2 py-4">
-            <img src={{ blog.blogPic.url }} alt="Blog Pic" >
-            <p class="font-mono font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-pink-500 to-yellow-500 mt-2">{{ blog.blogName|slice:"0:30" }}</p>
-            <p class="font-mono font-extrabold text-white py-2">{{ blog.blogDesc|striptags|safe | truncatechars:90 }}</p>
-            <div class="flex justify-between">
-              <a class="font-mono font-extrabold bg-gradient-to-r from-pink-500 to-yellow-500 text-white py-2 px-4 rounded-lg hover:from-purple-500 hover:to-pink-500" href="">Visit</a>
-              <p class="py-2 px-4 font-mono font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-pink-500 to-yellow-500">#{{ blog.blogCategory }}</p>
-            </div>
+{% extends 'core/layout.html' %}
+{% block content %}
+        <div class="container mx-auto grid grid-cols-1 md:grid-flow-cols md:grid-cols-2 gap-4 py-10 px-6 max-w-2xl">
+          <div class="md:col-span-1">
+            <img class="w-28 mx-auto rounded-full"
+              src="https://imgs.search.brave.com/5TUrhnb1Se-ppc3etZn6gR-dc8BTB9dDJB3vtozpx0U/rs:fit:500:0:0/g:ce/aHR0cHM6Ly9pLnBp/bmltZy5jb20vb3Jp/Z2luYWxzLzY0L2Y1/LzAxLzY0ZjUwMWRi/NDY3YzQ0NDQ1Mjg1/NTkxYWI4Y2E4NTEy/LmpwZw"
+              alt="profile_pic">
           </div>
-          {% endfor %}
-        </div>
-      </div>
-      <hr class="mx-auto h-[1px] max-w-2xl bg-slate-200">
-      <div class="container mx-auto max-w-2xl px-4 py-6">
-        <p class="font-mono my-6 font-extrabold text-transparent text-5xl bg-clip-text bg-gradient-to-r from-yellow-500 to-pink-500">Recent Projects:</p>
-        <div class="container grid max-w-2xl grid-cols-1 md:grid-cols-2 gap-4 my-4">
-          {% for proj in allproj %}
-          <div class="rounded-lg px-2 py-4 bg-white bg-opacity-20 backdrop-blur-md">
-            <img src={{ proj.projectPic.url }} alt="Project Pic" >
-            <p class="font-mono font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-pink-500 to-yellow-500 mt-2">{{ proj.projectName|slice:"0:30" }}</p>
-            <p class="font-mono font-extrabold text-white py-2">{{ proj.projectDesc|slice:"0:90" }}...</p>
-            <div class="flex justify-between">
-              <a class="font-mono font-extrabold bg-gradient-to-r from-pink-500 to-yellow-500 text-white py-2 px-4 rounded-lg hover:from-purple-500 hover:to-pink-500" href={{ proj.projectGitHub }}>GITHUB</a>
-              <a class="font-mono font-extrabold bg-gradient-to-r from-pink-500 to-yellow-500 text-white py-2 px-4 rounded-lg hover:from-purple-500 hover:to-pink-500" href={{ proj.projectDeployed }}>Deployed</a>
-            </div>
+          <div class="md:col-span-1 md:py-2">
+            <p
+              class="font-mono text-transparent text-4xl font-extrabold bg-clip-text bg-gradient-to-r from-pink-500 to-yellow-500 text-center md:text-left">
+              GIGA CHAD</p>
+            <p class="font-mono text-white text-xl font-extrabold text-center md:text-left py-2">Machine Learning and
+              Web Developer</p>
+            <p class="font-mono text-slate-300 font-extrabold text-sm text-center md:text-left">Arch Linux + i3 + VIM
+              user</p>
           </div>
-          {% endfor %}
         </div>
-      </div>
-
-    </div>
-    <!-- have a button POST a click via AJAX -->
-    <button class="my-2 rounded-lg bg-blue-500 px-4 py-2 text-white mx-2 hover:bg-blue-800 hover:text-yellow-200 hover:ring hover:ring-blue-300" hx-get="gigachaddy/project/" hx-swap="innerHTML" hx-target="#body">
-      Click Me
-    </button>
-    </div>
-    </div>
-  </body>
-</html>
+        <hr class="mx-auto h-[1px] max-w-2xl bg-slate-200">
+        <div class="container mx-auto max-w-2xl px-4 py-6">
+          <p
+            class="font-mono font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-pink-500 to-yellow-500">
+            Q - Why did the two Java methods get a divorce?</p>
+          <p class="font-extrabold font-mono text-white">A - Because they couldn't agree on the return type.</p>
+        </div>
+        <hr class="mx-auto h-[1px] max-w-2xl bg-slate-200">
+        <div class="container mx-auto max-w-2xl px-4 py-6">
+          <p
+            class="font-mono font-extrabold text-transparent text-5xl bg-clip-text bg-gradient-to-r from-yellow-500 to-pink-500">
+            Latest Blogs:</p>
+          <div class="container grid max-w-2xl grid-cols-1 md:grid-cols-2 gap-4 my-4">
+            {% for blog in allblog %}
+            <div class="bg-white bg-opacity-20 backdrop-blur-md rounded-lg px-2 py-4">
+              <img src={{ blog.blogPic.url }} alt="Blog Pic">
+              <p
+                class="font-mono font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-pink-500 to-yellow-500 mt-2">
+                {{ blog.blogName|slice:"0:30" }}</p>
+              <p class="font-mono font-extrabold text-white py-2">{{ blog.blogDesc|striptags|safe | truncatechars:90 }}
+              </p>
+              <div class="flex justify-between">
+                <a class="font-mono font-extrabold bg-gradient-to-r from-pink-500 to-yellow-500 text-white py-2 px-4 rounded-lg hover:from-purple-500 hover:to-pink-500"
+                  href="">Visit</a>
+                <p
+                  class="py-2 px-4 font-mono font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-pink-500 to-yellow-500">
+                  #{{ blog.blogCategory }}</p>
+              </div>
+            </div>
+            {% endfor %}
+          </div>
+        </div>
+        <hr class="mx-auto h-[1px] max-w-2xl bg-slate-200">
+        <div class="container mx-auto max-w-2xl px-4 py-6">
+          <p
+            class="font-mono my-6 font-extrabold text-transparent text-5xl bg-clip-text bg-gradient-to-r from-yellow-500 to-pink-500">
+            Recent Projects:</p>
+          <div class="container grid max-w-2xl grid-cols-1 md:grid-cols-2 gap-4 my-4">
+            {% for proj in allproj %}
+            <div class="rounded-lg px-2 py-4 bg-white bg-opacity-20 backdrop-blur-md">
+              <img src={{ proj.projectPic.url }} alt="Project Pic">
+              <p
+                class="font-mono font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-pink-500 to-yellow-500 mt-2">
+                {{ proj.projectName|slice:"0:30" }}</p>
+              <p class="font-mono font-extrabold text-white py-2">{{ proj.projectDesc|slice:"0:90" }}...</p>
+              <div class="flex justify-between">
+                <a class="font-mono font-extrabold bg-gradient-to-r from-pink-500 to-yellow-500 text-white py-2 px-4 rounded-lg hover:from-purple-500 hover:to-pink-500"
+                  href={{ proj.projectGitHub }}>GITHUB</a>
+                <a class="font-mono font-extrabold bg-gradient-to-r from-pink-500 to-yellow-500 text-white py-2 px-4 rounded-lg hover:from-purple-500 hover:to-pink-500"
+                  href={{ proj.projectDeployed }}>Deployed</a>
+              </div>
+            </div>
+            {% endfor %}
+          </div>
+        </div>
+{% endblock content %}
