more improvements on blog post views

--- a/core/templates/core/blogs.html
+++ b/core/templates/core/blogs.html
@@ -1,9 +1,9 @@
 <div class="container mx-auto max-w-2xl px-4 py-6">
     <p
-      class="font-mono font-extrabold text-transparent text-5xl bg-clip-text bg-gradient-to-r from-yellow-500 to-pink-500">
+      class="font-mono font-extrabold text-transparent text-3xl bg-clip-text bg-gradient-to-r from-yellow-500 to-pink-500">
       Latest Blogs:</p>
     <div class="container grid max-w-2xl grid-cols-1 md:grid-cols-2 gap-4 my-4">
-      {% for blog in allblog %}
+      {% for blog in object_list %}
       <div class="bg-white bg-opacity-20 backdrop-blur-md rounded-lg px-2 py-4">
         <img src={{ blog.blogPic.url }} alt="Blog Pic">
         <p
@@ -13,10 +13,10 @@
         </p>
         <div class="flex justify-between">
           <a class="font-mono font-extrabold bg-gradient-to-r from-pink-500 to-yellow-500 text-white py-2 px-4 rounded-lg hover:from-purple-500 hover:to-pink-500"
-            href="">Visit</a>
+            href="{% url 'blogPost' blog.pk %}">Visit</a>
           <p
             class="py-2 px-4 font-mono font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-pink-500 to-yellow-500">
-            #{{ blog.blogCategory }}</p>
+            #{{ blog.blogTag }}</p>
         </div>
       </div>
       {% endfor %}
