--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -26,7 +26,7 @@
         <hr class="mx-auto h-[1px] max-w-2xl bg-slate-200">
         <div class="container mx-auto max-w-2xl px-4 py-6">
           <p
-            class="font-mono font-extrabold text-transparent text-5xl bg-clip-text bg-gradient-to-r from-yellow-500 to-pink-500">
+            class="font-mono font-extrabold text-transparent text-3xl bg-clip-text bg-gradient-to-r from-yellow-500 to-pink-500">
             Latest Blogs:</p>
           <div class="container grid max-w-2xl grid-cols-1 md:grid-cols-2 gap-4 my-4">
             {% for blog in allblog %}
@@ -42,7 +42,7 @@
                   href="">Visit</a>
                 <p
                   class="py-2 px-4 font-mono font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-pink-500 to-yellow-500">
-                  #{{ blog.blogCategory }}</p>
+                  #{{ blog.blogTag }}</p>
               </div>
             </div>
             {% endfor %}
@@ -51,7 +51,7 @@
         <hr class="mx-auto h-[1px] max-w-2xl bg-slate-200">
         <div class="container mx-auto max-w-2xl px-4 py-6">
           <p
-            class="font-mono my-6 font-extrabold text-transparent text-5xl bg-clip-text bg-gradient-to-r from-yellow-500 to-pink-500">
+            class="font-mono my-6 font-extrabold text-transparent text-3xl bg-clip-text bg-gradient-to-r from-yellow-500 to-pink-500">
             Recent Projects:</p>
           <div class="container grid max-w-2xl grid-cols-1 md:grid-cols-2 gap-4 my-4">
             {% for proj in allproj %}
