--- a/core/templates/core/layout.html
+++ b/core/templates/core/layout.html
@@ -16,11 +16,11 @@
             <nav class="fixed w-full bg-black bg-opacity-20 backdrop-blur-lg">
                 <div class="container flex items-center justify-between px-6 pt-6 pb-6 mx-auto">
                     <div class="flex items-center">
-                        <a href=""
+                        <a href="/"
                             class="font-mono font-extrabold text-lg text-white pr-4 hover:text-transparent hover:bg-clip-text hover:bg-gradient-to-r hover:from-pink-500 hover:to-yellow-500">HOME</a>
-                        <a hx-get="projects/" hx-target="#body" hx-swap="innerHTML"
+                        <a hx-get="/projects/" hx-target="#body" hx-swap="innerHTML"
                             class="font-mono font-extrabold text-lg text-white pr-4 hover:text-transparent hover:bg-clip-text hover:bg-gradient-to-r hover:from-pink-500 hover:to-yellow-500">PROJECTS</a>
-                        <a hx-get="blogs/" hx-target="#body" hx-swap="innerHTML"
+                        <a hx-get="/blogs/" hx-target="#body" hx-swap="innerHTML"
                             class="font-mono font-extrabold text-lg text-white hover:text-transparent hover:bg-clip-text hover:bg-gradient-to-r hover:from-pink-500 hover:to-yellow-500">BLOGS</a>
                     </div>
                     <div class="flex items-center">
